--- a/Config/CarlaUE4.uproject
+++ b/Config/CarlaUE4.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.26",
+	"EngineAssociation": "{E91A4231-4932-F4F8-9B46-608BACC24C7C}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -95,13 +95,12 @@
 		{
 			"Name": "SteamVR",
 			"Enabled": true,
-			"SupportedTargetPlatforms": [
+			"WhitelistPlatforms": [
 				"Win32",
 				"Win64",
-				"Linux",
-				"Mac"
+				"Linux"
 			],
-			"WhitelistPlatforms": [
+			"SupportedTargetPlatforms": [
 				"Win32",
 				"Win64",
 				"Linux"
@@ -118,6 +117,10 @@
 		},
 		{
 			"Name": "EditorScriptingUtilities",
+			"Enabled": true
+		},
+		{
+			"Name": "LogitechWheelPlugin",
 			"Enabled": true
 		}
 	]
