--- a/Config/DReyeVRConfig.ini
+++ b/Config/DReyeVRConfig.ini
@@ -18,7 +18,7 @@ DrawDebugEditor=False                  # draw debug lines/sphere for eye gaze in
 # location & rotation of camera relative to vehicle (location units in cm, rotation in degrees)
 StartingPose="DriversSeat" # starting position of camera in vehicle (on begin play)
 # NOTE: we assume the location is suffix'd with "Loc" and rotation is suffixed with "Rot"
-DriversSeatLoc=(X=20.0, Y=-40.0, Z=120.0) # location of first-person camera
+DriversSeatLoc=(X=-11.0, Y=2.0, Z=140.0) # location of first-person camera
 DriversSeatRot=(R=0.0, P=0.0, Y=0.0)      # rotation of first-person camera
 FrontLoc=(X=250.0, Y=0.0, Z=90.0)         # location of camera in front of vehicle
 FrontRot=(R=0.0, P=0.0, Y=0.0)            # rotation of camera in front of vehicle
@@ -43,25 +43,25 @@ GrainIntensity=0       # how intense the grain is
 # you'll want to set the "XMirrorEnabled" flag to False for each of the 3 mirrors below!!
 
 # rear view mirror
-RearMirrorEnabled=True
+RearMirrorEnabled=False
 RearMirrorChassisTransform=(X=48.0, Y=0.0, Z=123.0 | R=0.0, P=0.0, Y=25.06 | X=1.0, Y=1.0, Z=1.0)
 RearMirrorTransform=(X=-0.5, Y=0.0, Z=0.0 | R=0.0, P=1.0, Y=0.0 | X=0.9, Y=0.98, Z=0.9)
 RearReflectionTransform=(X=-7, Y=0.0, Z=0.0 | R=0.0, P=90.0, Y=0.0 | X=0.002, Y=0.007, Z=1.0)
 RearScreenPercentage=85 # used very frequently (85% quality)
 # left view side mirror
-LeftMirrorEnabled=True
+LeftMirrorEnabled=False
 LeftMirrorTransform=(X=62.0, Y=-98.0, Z=105.5 | R=0.0, P=0.0, Y=0.0 | X=0.9, Y=0.9, Z=0.9)
 LeftReflectionTransform=(X=0, Y=0, Z=-3.0 | R=43.2, P=81, Y=22.5 | X=0.003, Y=0.005, Z=1.0)
 LeftScreenPercentage=65 # used quite a bit (65% quality)
 # right view side mirror
-RightMirrorEnabled=True
+RightMirrorEnabled=False
 RightMirrorTransform=(X=62, Y=98, Z=100.5 | R=0, P=-4, Y=2.79 | X=0.9, Y=0.9, Z=0.9)
 RightReflectionTransform=(X=0.0, Y=0.0, Z=2.22 | R=-1, P=90.0, Y=21.6 | X=0.003, Y=0.005, Z=1.0)
 RightScreenPercentage=50 # used very rarely if ever (50% quality)
 
 [SteeringWheel]
-InitLocation=(X=85.0, Y=-40.0, Z=85.0) # position of the steering wheel in the vehicle
-InitRotation=(R=0.0, P=-10.0, Y=0.0)   # tilt of the steering wheel at rest
+InitLocation=(X=36.247833, Y=0.2, Z=113.552185) # position of the steering wheel in the vehicle
+InitRotation=(R=0.0, P=0.000008, Y=0.0)   # tilt of the steering wheel at rest
 MaxSteerAngleDeg=900                   # max wheel rotation in degrees (pos and negative)
 SteeringScale=360                      # scale with which to rotate the wheel (normalized [-1, 1] -> degrees)
 
