Created connection between Unreal Engine and Arduino
Wrote code for Reading Serial Data from Arduino! The Data is in String format, So Needs String manipulation and convert String values to float values (Safe Conversion). After That the Data is used for Steerung, Acceleration and Braking.

--- a/Config/DReyeVRConfig.ini
+++ b/Config/DReyeVRConfig.ini
@@ -18,7 +18,7 @@ DrawDebugEditor=False                  # draw debug lines/sphere for eye gaze in
 # location & rotation of camera relative to vehicle (location units in cm, rotation in degrees)
 StartingPose="DriversSeat" # starting position of camera in vehicle (on begin play)
 # NOTE: we assume the location is suffix'd with "Loc" and rotation is suffixed with "Rot"
-DriversSeatLoc=(X=-11.0, Y=2.0, Z=140.0) # location of first-person camera
+DriversSeatLoc=(X=-59.0, Y=2.0, Z=186.0) # location of first-person camera
 DriversSeatRot=(R=0.0, P=0.0, Y=0.0)      # rotation of first-person camera
 FrontLoc=(X=250.0, Y=0.0, Z=90.0)         # location of camera in front of vehicle
 FrontRot=(R=0.0, P=0.0, Y=0.0)            # rotation of camera in front of vehicle
@@ -68,7 +68,7 @@ SteeringScale=360                      # scale with which to rotate the wheel (n
 [EgoSensor]
 StreamSensorData=True    # Set to False to skip streaming sensor data (for PythonAPI) on every tick
 MaxTraceLenM=1000.0      # maximum trace length (in meters) to use for world-hit point calculation
-DrawDebugFocusTrace=True # draw the debug focus trace & hit point in editor
+DrawDebugFocusTrace=False # draw the debug focus trace & hit point in editor
 
 [VehicleInputs]
 ScaleSteeringDamping=0.6
@@ -81,9 +81,9 @@ ScaleMouseX=1.0
 [EgoVehicleHUD]
 HUDScaleVR=6               # scale all HUD elements in VR mode only
 DrawFPSCounter=True        # draw's FPS (frames per second) in top right corner of flat screen
-DrawFlatReticle=True       # reticle in flat-screen mode
+DrawFlatReticle=False       # reticle in flat-screen mode
 DrawGaze=False             # draw debug gaze lines on flat-screen hud
-DrawSpectatorReticle=True  # reticle in spectator mode during vr (VR spectator HUD only)
+DrawSpectatorReticle=False  # reticle in spectator mode during vr (VR spectator HUD only)
 ReticleSize=100            # (percent) diameter of reticle (thickness also scales)
 EnableSpectatorScreen=True # whether or not to enable the flat-screen spectator when in VR
 
@@ -126,5 +126,5 @@ LogUpdates=False # whether or not to print debug messages
 # currently only works in the Editor, not in a shipping/package game where it'd be most useful. We are
 # actively working on this feature and will enable VRS once it is fully supported.
 [VariableRateShading] # disabled by default (would need to enable via CarlaUE4.Build.cs flag)
-Enabled=True          # currently only works in Editor mode (but enabled in Build.cs settings)
-UsingEyeTracking=True # use eye tracking for foveated rendering if available
+Enabled=False          # currently only works in Editor mode (but enabled in Build.cs settings)
+UsingEyeTracking=False # use eye tracking for foveated rendering if available
